--- a/pdfViewer/src/main/res/menu/menu.xml
+++ b/pdfViewer/src/main/res/menu/menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/download"
-        android:icon="@android:drawable/stat_sys_download"
+        android:icon="@drawable/ic_download"
         android:iconTint="#888A87"
         android:title="Download"
         app:showAsAction="always" />
