--- a/pdfViewer/src/main/res/layout/activity_pdf_viewer.xml
+++ b/pdfViewer/src/main/res/layout/activity_pdf_viewer.xml
@@ -7,15 +7,6 @@
     android:orientation="vertical"
     tools:context=".PdfViewerActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="?attr/actionBarSize"
-        android:background="#3B3C80"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <FrameLayout
         android:id="@+id/mainLayout"
         android:layout_width="0dp"
@@ -23,7 +14,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+        app:layout_constraintTop_toBottomOf="parent">
 
         <com.rajat.pdfviewer.PdfRendererView
             android:id="@+id/pdfView"
