--- a/pdfViewer/src/main/res/layout/activity_pdf_viewer.xml
+++ b/pdfViewer/src/main/res/layout/activity_pdf_viewer.xml
@@ -7,6 +7,15 @@
     android:orientation="vertical"
     tools:context=".PdfViewerActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#3B3C80"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <FrameLayout
         android:id="@+id/mainLayout"
         android:layout_width="0dp"
@@ -14,7 +23,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <com.rajat.pdfviewer.PdfRendererView
             android:id="@+id/pdfView"
