--- a/pdfViewer/src/main/res/layout/activity_pdf_viewer.xml
+++ b/pdfViewer/src/main/res/layout/activity_pdf_viewer.xml
@@ -16,6 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:theme="@style/ToolbarTheme"
         app:titleTextColor="#FFFFFF" />
 
     <FrameLayout
