--- a/pdfViewer/src/main/res/menu/menu.xml
+++ b/pdfViewer/src/main/res/menu/menu.xml
@@ -4,8 +4,7 @@
 
     <item
         android:id="@+id/download"
-        android:icon="@drawable/ic_download"
-        android:iconTint="#888A87"
-        android:title="Download"
+        android:icon="@drawable/ic_share"
+        android:title="@string/menu_title_1"
         app:showAsAction="always" />
 </menu>
